--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_barcode_scanner: ^2.0.0
+  path_provider: ^2.1.1
   provider: ^6.1.1
+  sqflite: ^2.3.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
