--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   path_provider: ^2.1.1
   provider: ^6.1.1
   sqflite: ^2.3.0
+  url_launcher: ^6.2.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
