--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_barcode_scanner: ^2.0.0
+  google_maps_flutter: ^2.5.0
   path_provider: ^2.1.1
   provider: ^6.1.1
   sqflite: ^2.3.0
