--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_barcode_scanner: ^2.0.0
+  flutter_spinkit: ^5.2.0
   google_maps_flutter: ^2.5.0
   path_provider: ^2.1.1
   provider: ^6.1.1
@@ -39,10 +40,10 @@ dependencies:
   url_launcher: ^6.2.2
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.9.2
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.9.2
 
 flutter_icons:
   android: true
