--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,10 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_barcode_scanner: ^2.0.0
+  flutter_secure_storage: ^9.0.0
   flutter_spinkit: ^5.2.0
   google_maps_flutter: ^2.5.0
+  http: ^1.1.2
   path_provider: ^2.1.1
   provider: ^6.1.1
   sqflite: ^2.3.0
